# hmm

./: CMakeLists.txt  conanfile.txt  hmm.cpp  hmm.hpp  main.cpp
cmake/Modules/: FindOpenBLAS.cmake
